# lab

./: .gitignore  README.md  index.html  mini-isaac.wasm
game/: Cargo.toml
game/src/: main.rs
mujoco/: README.md  index.html  package-lock.json
mujoco/assets/scenes/openduck/: open_duck_mini_v2.xml  scene_flat_terrain.xml
mujoco/server/: mujoco_server.py  requirements.txt  start_server.sh
mujoco/src/: main.js  mujocoUtils.js  onnxController.js  rlPolicy.js  tfTraining.js  wsClient.js
rl/: env.py  requirements.txt  train.py
