[package]
name = "mini-isaac"
version = "0.1.0"
edition = "2021"
description = "A lightweight Isaac-style roguelike for RL experiments"

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true

[profile.release.package."*"]
opt-level = 3
